--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Rock Paper Scissors</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <button type="button" id="rock">Rock</button>
+    <button type="button" id="scissors">Scissors</button>
+    <button type="button" id="paper">Paper</button>
+    <div id="results"></div>
 </body>
 </html>
