Finish game logic with ui
Finished logic to store score of computer and player. Also added counter that limits game to 5 rounds, when it reaches 5 - all scorings become 0 and header shows the winner of the game.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <button type="button" id="scissors">Scissors</button>
     <button type="button" id="paper">Paper</button>
     <div id="results"></div>
+    <div id="score">
+        <h3 id="scoreHeader">Score: </h3>
+    </div>
 </body>
 </html>
